force-app/main/default/objects/At_Risk__c/At_Risk__c.object-meta.xml
<CustomObject>
    <label>At Risk Assessment</label>
    <nameField>
        <displayFormat>At Risk-{0000000}</displayFormat>
        <label>At Risk Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>At Risk Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>