force-app/main/default/objects/At_Risk__c/fields/All_Business_at_this_Account_is_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>All_Business_at_this_Account_is_at_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this field is checked all of the account records in the account hierarchy will be flagged as At Risk</description>
    <inlineHelpText>if this field is checked all of the account records in the account hierarchy will be flagged as At Risk. If the risk profiled on this assessment will not impact the entire IMGA do not check this box.</inlineHelpText>
    <label>All Business at this Account is at Risk</label>
    <type>Checkbox</type>
</CustomField>