force-app/main/default/objects/At_Risk__c/fields/At_Risk_Assessor__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>At Risk Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>At_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>