force-app/main/default/objects/At_Risk__c/fields/At_Risk_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Entered_Date__c</fullName>
    <description>The date the At Risk Assessment was first set to Risk Stage 1 - 4. Populated by workflow/field update based on Risk Stage</description>
    <inlineHelpText>The date the At Risk Assessment was first set to Risk Stage 1 - 4. Populated by workflow/field update based on Risk Stage</inlineHelpText>
    <label>At Risk Entered Date</label>
    <type>Date</type>
</CustomField>