force-app/main/default/objects/At_Risk__c/fields/B_1_Decrease_add_lot_retrieve_refile__c.field-meta.xml
<CustomField>
    <fullName>B_1_Decrease_add_lot_retrieve_refile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the customer experience any decrease in add-lot, retrieval/refile, or transportation activities in the last year?</inlineHelpText>
    <label>B.1 Decrease add lot, retrieve, refile?</label>
    <type>Checkbox</type>
</CustomField>