force-app/main/default/objects/At_Risk__c/fields/IM_B9_Significant_bus_tech_change_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_B9_Significant_bus_tech_change_calc__c</fullName>
    <formula>IF ( IB_9_Significant_business_tech_changes__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B9. Significant bus/tech change calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>