force-app/main/default/objects/At_Risk__c/fields/IM_B_2_Increase_destruction_PW_activity__c.field-meta.xml
<CustomField>
    <fullName>IM_B_2_Increase_destruction_PW_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the customer experienced any increase in destruction and/or PW related activities in the last year?</inlineHelpText>
    <label>B.2 Increase destruction, PW activity?</label>
    <type>Checkbox</type>
</CustomField>