force-app/main/default/objects/At_Risk__c/fields/IM_B_2_increase_destruction_pw_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_B_2_increase_destruction_pw_calc__c</fullName>
    <formula>IF ( IM_B_2_Increase_destruction_PW_activity__c =TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B.2 increase destruction, pw calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>