force-app/main/default/objects/At_Risk__c/fields/IM_B_3_merger_acquisitions_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_B_3_merger_acquisitions_calc__c</fullName>
    <formula>IF ( IM_B_3_Merger_Acquisition__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B.3 merger/acquisitions calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>