force-app/main/default/objects/At_Risk__c/fields/IM_B_4_Experiencing_external_forces__c.field-meta.xml
<CustomField>
    <fullName>IM_B_4_Experiencing_external_forces__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the customer experiencing external forces (regulatory agencies, environmental trends) that drive their business?</inlineHelpText>
    <label>B.4 Experiencing external forces?</label>
    <type>Checkbox</type>
</CustomField>