force-app/main/default/objects/At_Risk__c/fields/IM_B_5_business_change_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_B_5_business_change_calc__c</fullName>
    <formula>IF (  IM_B_5_Significant_Business_Changes__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B.5 business change calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>