force-app/main/default/objects/At_Risk__c/fields/IM_B_6_Budget_restraint_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_B_6_Budget_restraint_calc__c</fullName>
    <formula>IF ( IM_B_6_Focus_on_budget_restraints__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B.6 Budget restraint calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>