force-app/main/default/objects/At_Risk__c/fields/IM_B_6_Focus_on_budget_restraints__c.field-meta.xml
<CustomField>
    <fullName>IM_B_6_Focus_on_budget_restraints__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the customer focusing on budget restraints?</inlineHelpText>
    <label>B.6 Focus on budget restraints?</label>
    <type>Checkbox</type>
</CustomField>