force-app/main/default/objects/At_Risk__c/fields/IM_B_7_Reacting_to_market_forces__c.field-meta.xml
<CustomField>
    <fullName>IM_B_7_Reacting_to_market_forces__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the customer reacting to current market and economic forces?</inlineHelpText>
    <label>B.7 Reacting to market forces?</label>
    <type>Checkbox</type>
</CustomField>