force-app/main/default/objects/At_Risk__c/fields/IM_B_8_Existing_or_potential_litigation__c.field-meta.xml
<CustomField>
    <fullName>IM_B_8_Existing_or_potential_litigation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the customer undergoing existing or potential litigation affecting their program?</inlineHelpText>
    <label>B.8 Existing or potential litigation?</label>
    <type>Checkbox</type>
</CustomField>