force-app/main/default/objects/At_Risk__c/fields/IM_B_8_Litigation_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_B_8_Litigation_calc__c</fullName>
    <formula>IF ( IM_B_8_Existing_or_potential_litigation__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B.8 Litigation calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>