force-app/main/default/objects/At_Risk__c/fields/IM_Business_Practice_Changes_Score__c.field-meta.xml
<CustomField>
    <fullName>IM_Business_Practice_Changes_Score__c</fullName>
    <formula>IM_B_1_decrease_activity_calc__c + IM_B_2_increase_destruction_pw_calc__c + IM_B_3_merger_acquisitions_calc__c + IM_B_4_External_force_calc__c + IM_B_5_business_change_calc__c + IM_B_6_Budget_restraint_calc__c + IM_B_7_React_to_market_forces_calc__c + IM_B_8_Litigation_calc__c +  IM_B9_Significant_bus_tech_change_calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Practice Changes Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>