force-app/main/default/objects/At_Risk__c/fields/IM_E10_Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>IM_E10_Bad_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Outstanding invoice query or outstanding debt issues</description>
    <inlineHelpText>Outstanding invoice query or outstanding debt issues</inlineHelpText>
    <label>E10. In Query or Bad Debt</label>
    <type>Checkbox</type>
</CustomField>