force-app/main/default/objects/At_Risk__c/fields/IM_E2_Contact_Changed__c.field-meta.xml
<CustomField>
    <fullName>IM_E2_Contact_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>customer contact has changed in previous 13 weeks</description>
    <inlineHelpText>Customer contact has changed in previous 13 weeks</inlineHelpText>
    <label>E2. Primary Contact Changed</label>
    <type>Checkbox</type>
</CustomField>