force-app/main/default/objects/At_Risk__c/fields/IM_E5_Price_10__c.field-meta.xml
<CustomField>
    <fullName>IM_E5_Price_10__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Price increase &gt;10% notified in previous 13 weeks</description>
    <inlineHelpText>Price increase &gt;10% notified in previous 13 weeks</inlineHelpText>
    <label>E5. Price Increase &gt; 10%</label>
    <type>Checkbox</type>
</CustomField>