force-app/main/default/objects/At_Risk__c/fields/IM_E7_Perm_Outs__c.field-meta.xml
<CustomField>
    <fullName>IM_E7_Perm_Outs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Perm-outs exceed 5% of total storage</description>
    <inlineHelpText>Perm-outs exceed 5% of total storage</inlineHelpText>
    <label>E7. Increased Permanent Withdrawals</label>
    <type>Checkbox</type>
</CustomField>