force-app/main/default/objects/At_Risk__c/fields/IM_E8_Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>IM_E8_Contract_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract renewal due within 6 months</description>
    <inlineHelpText>Contract renewal due within 6 months</inlineHelpText>
    <label>E8. Contract Renewal Due</label>
    <type>Checkbox</type>
</CustomField>