force-app/main/default/objects/At_Risk__c/fields/IM_P11_Contractual_risks__c.field-meta.xml
<CustomField>
    <fullName>IM_P11_Contractual_risks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there contractual risks (unlimited liability, nonstandard SLAs, termination for convenience clause)?</inlineHelpText>
    <label>P11. Contractual risks?</label>
    <type>Checkbox</type>
</CustomField>