force-app/main/default/objects/At_Risk__c/fields/IM_P1_Engaged_Calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P1_Engaged_Calc__c</fullName>
    <formula>IF( IM_P1_3rd_party_consultant__c = TRUE,   1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P1. Engaged Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>