force-app/main/default/objects/At_Risk__c/fields/IM_P2_Pricing_Dissatisfaction_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P2_Pricing_Dissatisfaction_calc__c</fullName>
    <formula>IF(  IM_P2_Pricing_dissatisfaction__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P2. Pricing Dissatisfaction calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>