force-app/main/default/objects/At_Risk__c/fields/IM_P3_RFP_Calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P3_RFP_Calc__c</fullName>
    <formula>IF (  IM_P3_Issue_an_RFI_RFP__c = TRUE,  1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P3. RFP Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>