force-app/main/default/objects/At_Risk__c/fields/IM_P4_Question_Min_Calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P4_Question_Min_Calc__c</fullName>
    <formula>IF(  IM_P4_Question_min_storage_req__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P4. Question Min Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>