force-app/main/default/objects/At_Risk__c/fields/IM_P5_Competitive_Prop_Calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P5_Competitive_Prop_Calc__c</fullName>
    <formula>IF(  IM_P5_Receive_a_competitive_proposal__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P5. Competitive Prop Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>