force-app/main/default/objects/At_Risk__c/fields/IM_P5_Receive_a_competitive_proposal__c.field-meta.xml
<CustomField>
    <fullName>IM_P5_Receive_a_competitive_proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P5. Receive a competitive proposal?</label>
    <type>Checkbox</type>
</CustomField>