force-app/main/default/objects/At_Risk__c/fields/IM_P6_Collection_Calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P6_Collection_Calc__c</fullName>
    <formula>IF(  IM_P6_Collection_or_A_R_dispute__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P6. Collection Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>