force-app/main/default/objects/At_Risk__c/fields/IM_P7_Price_increase_10__c.field-meta.xml
<CustomField>
    <fullName>IM_P7_Price_increase_10__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ha the customer received a price increase greater than 10% in the last year and/or out of the annual cycle?</inlineHelpText>
    <label>P7. Price increase &gt;10%?</label>
    <type>Checkbox</type>
</CustomField>