force-app/main/default/objects/At_Risk__c/fields/IM_P7_Price_Increase_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P7_Price_Increase_calc__c</fullName>
    <formula>If ( IM_P7_Price_increase_10__c =TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P7. Price Increase calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>