force-app/main/default/objects/At_Risk__c/fields/IM_P8_Fee_refusal_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P8_Fee_refusal_calc__c</fullName>
    <formula>IF( IM_P8_Refuse_to_pay_fees__c =TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P8. Fee refusal calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>