force-app/main/default/objects/At_Risk__c/fields/IM_P8_Refuse_to_pay_fees__c.field-meta.xml
<CustomField>
    <fullName>IM_P8_Refuse_to_pay_fees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the customer refused to pay any particular fees (admin fees, re-box, fuel surcharge, etc) they have determined to be unacceptable?</inlineHelpText>
    <label>P8. Refuse to pay fees?</label>
    <type>Checkbox</type>
</CustomField>