force-app/main/default/objects/At_Risk__c/fields/IM_P9_Contract_request_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_P9_Contract_request_calc__c</fullName>
    <formula>IF(  IM_P9_Request_copy_of_contract__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P9. Contract request calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>