force-app/main/default/objects/At_Risk__c/fields/IM_R_10_Viable_competitor__c.field-meta.xml
<CustomField>
    <fullName>IM_R_10_Viable_competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has a competitor vehicle or literature been sighted at the customer location?</inlineHelpText>
    <label>R.10 Viable competitor?</label>
    <type>Checkbox</type>
</CustomField>