force-app/main/default/objects/At_Risk__c/fields/IM_R_10_Viable_competitor_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_R_10_Viable_competitor_calc__c</fullName>
    <formula>IF ( IM_R_10_Viable_competitor__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R.10 Viable competitor calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>