force-app/main/default/objects/At_Risk__c/fields/IM_R_12_Single_contact_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_R_12_Single_contact_calc__c</fullName>
    <formula>IF ( IM_R_12_Single_contact_within_customer__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R.12 Single contact calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>