force-app/main/default/objects/At_Risk__c/fields/IM_R_12_Single_contact_within_customer__c.field-meta.xml
<CustomField>
    <fullName>IM_R_12_Single_contact_within_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are we limited to a singular contact/relationship within a customer (lack of organizational depth of relationship)? Does our primary contact lack organizational influence?</inlineHelpText>
    <label>R.12 Single contact within customer?</label>
    <type>Checkbox</type>
</CustomField>