force-app/main/default/objects/At_Risk__c/fields/IM_R_13_Contentious_relationship__c.field-meta.xml
<CustomField>
    <fullName>IM_R_13_Contentious_relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do we have a contentious relationship with the customer? Is the current depth and breath of the relationship healthy?</inlineHelpText>
    <label>R.13 Contentious relationship?</label>
    <type>Checkbox</type>
</CustomField>