force-app/main/default/objects/At_Risk__c/fields/IM_R_14_Relationship_manager_changed__c.field-meta.xml
<CustomField>
    <fullName>IM_R_14_Relationship_manager_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have we changed our relationship manager assigned to this customer in the last year?</inlineHelpText>
    <label>R.14 Relationship manager changed?</label>
    <type>Checkbox</type>
</CustomField>