force-app/main/default/objects/At_Risk__c/fields/IM_R_2_change_in_decision_maker_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_R_2_change_in_decision_maker_calc__c</fullName>
    <formula>IF (  IM_R_2_Change_in_decision_making_positio__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R.2 change in decision maker calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>