force-app/main/default/objects/At_Risk__c/fields/IM_R_2_Change_in_decision_making_positio__c.field-meta.xml
<CustomField>
    <fullName>IM_R_2_Change_in_decision_making_positio__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the customer made major changes in the decision-making positions within the company?</inlineHelpText>
    <label>R.2 Change in decision making positions?</label>
    <type>Checkbox</type>
</CustomField>