force-app/main/default/objects/At_Risk__c/fields/IM_R_3_Outsource_to_3rd_party__c.field-meta.xml
<CustomField>
    <fullName>IM_R_3_Outsource_to_3rd_party__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the customer outsourced the relationship to a third-party vendor?</inlineHelpText>
    <label>R.3 Outsource to 3rd party?</label>
    <type>Checkbox</type>
</CustomField>