force-app/main/default/objects/At_Risk__c/fields/IM_R_3_Outsource_to_3rd_party_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_R_3_Outsource_to_3rd_party_calc__c</fullName>
    <formula>IF ( IM_R_3_Outsource_to_3rd_party__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R.3 Outsource to 3rd party calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>