force-app/main/default/objects/At_Risk__c/fields/IM_R_5_Relationship_manager_change_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_R_5_Relationship_manager_change_calc__c</fullName>
    <formula>IF ( IM_R_5_Request_change_in_relation_manage__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R.5 Relationship manager change calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>