force-app/main/default/objects/At_Risk__c/fields/IM_R_7_key_contact_decision_maker_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_R_7_key_contact_decision_maker_calc__c</fullName>
    <formula>IF ( IM_R_7_Key_contact_is_decision_maker__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R.7 key contact decision maker calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>