force-app/main/default/objects/At_Risk__c/fields/IM_R_7_Key_contact_is_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>IM_R_7_Key_contact_is_decision_maker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer key contacts make decisions for the entire customer organization?</inlineHelpText>
    <label>R.7 Key contact is decision maker?</label>
    <type>Checkbox</type>
</CustomField>