force-app/main/default/objects/At_Risk__c/fields/IM_R_8_Event_in_other_business_line_affe__c.field-meta.xml
<CustomField>
    <fullName>IM_R_8_Event_in_other_business_line_affe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have events in other business lines affected existing business line?</inlineHelpText>
    <label>R.8 Event in other business line affect?</label>
    <type>Checkbox</type>
</CustomField>