force-app/main/default/objects/At_Risk__c/fields/IM_R_9_Event_in_existing_bus_line_affect__c.field-meta.xml
<CustomField>
    <fullName>IM_R_9_Event_in_existing_bus_line_affect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have events in the existing business line affected other business lines?</inlineHelpText>
    <label>R.9 Event in existing bus line affect?</label>
    <type>Checkbox</type>
</CustomField>