force-app/main/default/objects/At_Risk__c/fields/IM_S_1_Service_issue_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_S_1_Service_issue_calc__c</fullName>
    <formula>IF ( IM_S_1_Service_Issue_previous_6_months__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S.1 Service issue calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>