force-app/main/default/objects/At_Risk__c/fields/IM_S_1_Service_Issue_previous_6_months__c.field-meta.xml
<CustomField>
    <fullName>IM_S_1_Service_Issue_previous_6_months__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the customer experienced multiple missed deliveries, transportation reschedules, and/or resolution service delayes in the last 6 mnths?</inlineHelpText>
    <label>S.1 Service Issue previous 6 months</label>
    <type>Checkbox</type>
</CustomField>