force-app/main/default/objects/At_Risk__c/fields/IM_S_3_Issue_resolution_dissatisfaction__c.field-meta.xml
<CustomField>
    <fullName>IM_S_3_Issue_resolution_dissatisfaction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>has the customer expressed dissatisfaction with responsiveness and closure on issue resolution on more than one occasion in the last 6 months?</inlineHelpText>
    <label>S.3 Issue resolution dissatisfaction</label>
    <type>Checkbox</type>
</CustomField>