force-app/main/default/objects/At_Risk__c/fields/IM_S_4_Three_or_more_service_communicato__c.field-meta.xml
<CustomField>
    <fullName>IM_S_4_Three_or_more_service_communicato__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer have 3 or more service communicators?</inlineHelpText>
    <label>S.4 Three or more service communicators?</label>
    <type>Checkbox</type>
</CustomField>