force-app/main/default/objects/At_Risk__c/fields/IM_S_5_Low_Find_rate_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_S_5_Low_Find_rate_calc__c</fullName>
    <formula>IF ( IM_S_5_Find_rate_98__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S.5 Low Find rate calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>