force-app/main/default/objects/At_Risk__c/fields/IM_S_6_Box_research_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_S_6_Box_research_calc__c</fullName>
    <formula>IF (  IM_S_6_Boxes_on_research__c =TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S.6 Box research calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>