force-app/main/default/objects/At_Risk__c/fields/IM_S_6_Boxes_on_research__c.field-meta.xml
<CustomField>
    <fullName>IM_S_6_Boxes_on_research__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer have boxes on research?</inlineHelpText>
    <label>S.6 Boxes on research?</label>
    <type>Checkbox</type>
</CustomField>