force-app/main/default/objects/At_Risk__c/fields/IM_S_7_nonstand_op_req_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_S_7_nonstand_op_req_calc__c</fullName>
    <formula>IF (  IM_S_7_Nonstandard_Op_Req__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S.7 nonstand op req calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>