force-app/main/default/objects/At_Risk__c/fields/IM_S_7_Nonstandard_Op_Req__c.field-meta.xml
<CustomField>
    <fullName>IM_S_7_Nonstandard_Op_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the customer have non-standard operation requirements (unusual logistics, dedicated staff)?</inlineHelpText>
    <label>S.7 Nonstandard Op Req</label>
    <type>Checkbox</type>
</CustomField>