force-app/main/default/objects/At_Risk__c/fields/IM_S_8_Cust_percept_calc__c.field-meta.xml
<CustomField>
    <fullName>IM_S_8_Cust_percept_calc__c</fullName>
    <formula>IF ( IM_S_8_Cust_Percept_affect_Relationship__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S.8 Cust percept calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>