force-app/main/default/objects/At_Risk__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Legacy ID used for migrated records. For IME, this is the At Risk Register Id</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>