force-app/main/default/objects/At_Risk__c/fields/reuse__c.field-meta.xml
<CustomField>
    <fullName>reuse__c</fullName>
    <label>reuse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>