force-app/main/default/objects/At_Risk__c/fields/Risk_Stage_1_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Stage_1_Entered_Date__c</fullName>
    <description>The date the At Risk Assessment was last set to Risk Stage &apos;1. At Risk&apos;. Populated by workflow/field update based on Risk Stage</description>
    <inlineHelpText>The date the At Risk Assessment was last set to Risk Stage &apos;1. At Risk&apos;. Populated by workflow/field update based on Risk Stage</inlineHelpText>
    <label>Risk Stage 1 Entered Date</label>
    <type>Date</type>
</CustomField>