force-app/main/default/objects/At_Risk__c/fields/Risk_Stage_5_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Stage_5_Entered_Date__c</fullName>
    <description>The date the At Risk Assessment was last set to Risk Stage ‘5. Retained (closed)’. Populated by workflow/field update based on Risk Stage</description>
    <inlineHelpText>The date the At Risk Assessment was last set to Risk Stage ‘5. Retained (closed)’. Populated by workflow/field update based on Risk Stage</inlineHelpText>
    <label>Risk Stage 5 Entered Date</label>
    <type>Date</type>
</CustomField>