force-app/main/default/objects/At_Risk__c/recordTypes/IME_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>IME_Risk_Assessment</fullName>
    <active>true</active>
    <description>Used for risk assessments created by the international team.</description>
    <label>IME Risk Assessment</label>
</RecordType>