force-app/main/default/objects/At_Risk__c/recordTypes/NA_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>NA_Risk_Assessment</fullName>
    <active>true</active>
    <description>Used by NA Account Manages and sales to quantify the risk at a specific customer ID</description>
    <label>NA Risk Assessment</label>
</RecordType>