force-app/main/default/objects/At_Risk__c/listViews/Created_By_Alias.listView-meta.xml
<ListView>
    <fullName>Created_By_Alias</fullName>
    <columns>NAME</columns>
    <columns>At_Risk_Assessor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Account__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>At_Risk_Entered_Date__c</columns>
    <columns>At_Risk_Score__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>TPhil001</value>
    </filters>
    <label>Created By Alias</label>
    <language>en_US</language>
</ListView>